--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8080
+
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+info.application.name=Spring Sample Application
+info.app.description=This is my first spring boot application
+info.app.version=1.0.0 
